Try fix miniCluster jar (#39912)