@@ -98,7 +98,17 @@ s.close()
 FLINK_PORT=$(python -c "$SOCKET_SCRIPT")
 
 echo "Starting Flink mini cluster listening on port $FLINK_PORT"
-java -Dorg.slf4j.simpleLogger.defaultLogLevel=warn -jar "$FLINK_MINI_CLUSTER_JAR" --rest-port "$FLINK_PORT" --rest-bind-address localhost &
+java \
+  --add-opens=java.base/sun.nio.ch=ALL-UNNAMED \
+  --add-opens=java.base/java.nio=ALL-UNNAMED \
+  --add-opens=java.base/java.util=ALL-UNNAMED \
+  --add-opens=java.base/java.lang.invoke=ALL-UNNAMED \
+  --add-opens=java.base/java.lang=ALL-UNNAMED \
+  -Djava.security.manager=allow \
+  -Dorg.slf4j.simpleLogger.defaultLogLevel=warn \
+  -jar "$FLINK_MINI_CLUSTER_JAR" \
+  --rest-port "$FLINK_PORT" \
+  --rest-bind-address localhost &
 
 PIPELINE_PY="
 import apache_beam as beam
